--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "bootstrap-datepicker": "^1.6.0",
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.5.0",
-    "ng-file-upload": "^12.0.1"
+    "ng-file-upload": "^12.0.1",
+    "slick-carousel": "^1.5.9"
   }
 }
