--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   },
   "dependencies": {
     "app-root-path": "^1.0.0",
+    "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
+    "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
-    "express-session": "latest",
-    "bcrypt-nodejs" : "latest",
     "dateformat": "^1.0.12",
     "ejs": "^2.4.1",
     "express": "~4.0.0",
@@ -22,9 +22,9 @@
     "nodemon": "^1.9.1",
     "open": "0.0.5",
     "passport": "~0.2.1",
-    "passport-local": "~1.0.0",
-    "connect-flash": "~0.1.1",
-    "passport-facebook": "~2.0.0"
+    "passport-facebook": "~2.0.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "~1.0.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
