--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport": "~0.2.1",
     "passport-facebook": "~2.0.0",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "~1.0.0"
+    "passport-local": "~1.0.0",
+    "passport-twitter": "^1.0.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
