--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "app-root-path": "^1.0.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
+    "cloudinary": "^1.3.1",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
     "dateformat": "^1.0.12",
