--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ build/Release
 # Dependency directory
 # Commenting this out is preferred by some people, see
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
+node_module
+bower_components
 node_modules
 
 # Users Environment Variables
