--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "e-cart",
+  "name": "ecommerce-app",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "app-root-path": "^1.0.0",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
-    "cloudinary": "^1.3.1",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
-    "dateformat": "^1.0.12",
     "ejs": "^2.4.1",
     "express": "~4.0.0",
     "express-session": "~1.0.0",
     "method-override": "~1.0.0",
-    "moment": "^2.11.2",
     "mongoose": "^4.4.5",
     "morgan": "~1.0.0",
     "multer": "^1.1.0",
     "nodemon": "^1.9.1",
-    "open": "0.0.5",
     "passport": "~0.2.1",
     "passport-facebook": "~2.0.0",
     "passport-google-oauth": "^1.0.0",
