--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.6",
     "font-awesome": "^4.5.0",
     "ng-file-upload": "^12.0.1",
-    "slick-carousel": "^1.5.9"
+    "slick-carousel": "^1.5.9",
+    "angular-bootstrap": "^1.3.1"
   }
 }
