--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "npm":  "3.7.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall":"bower install"
   },
   "dependencies": {
     "bcrypt-nodejs": "latest",
