--- a/bower.json
+++ b/bower.json
@@ -16,14 +16,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular-route": "^1.5.0",
-    "angular-material": "^1.0.5",
-    "angular": "^1.5.0",
-    "bootstrap-datepicker": "^1.6.0",
-    "bootstrap": "^3.3.6",
-    "font-awesome": "^4.5.0",
-    "ng-file-upload": "^12.0.1",
-    "slick-carousel": "^1.5.9",
-    "angular-bootstrap": "^1.3.1"
+    "angular-route": "latest",
+    "angular-material": "latest",
+    "angular": "latest",
+    "bootstrap-datepicker": "latest",
+    "bootstrap": "latest",
+    "font-awesome": "latest",
+    "ng-file-upload": "latest",
+    "slick-carousel": "latest",
+    "angular-bootstrap": "latest",
+    "requirejs": "latest",
+    "domReady": "requirejs-domready#^2.0.1"
   }
 }
